dev/scss/00_critical-inline.scss
// Critical Inline CSS
// Inserted into a <style> tag in the <head> so it loads instantly

@import "reset.scss";
@import "mixins.scss";

// Critical Utility
.u_visually-hidden {
  @include visually-hidden;
}

.f_small {
  @include f_small;
}
.f_smaller {
  @include f_smaller;
}
.f_smallest {
  @include f_smallest;
}

// Font-face declarations
@font-face {
  font-display: swap;
  font-family: 'icomoon';
  font-style: normal;
  font-weight: normal;
  src: url('assets/fonts/icomoon/icomoon.ttf?byte2f') format('truetype'),
       url('assets/fonts/icomoon/icomoon.woff?byte2f') format('woff'),
       url('assets/fonts/icomoon/icomoon.svg?byte2f#icomoon') format('svg');
}


// Skeleton
body {
  font-family: 'Montserrat', helvetica, sans-serif; // critical
  font-size: 16px;  // establishes rem basis
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  @media #{$mq_sm} {
    overflow-x: hidden;  // prevent horizontal scrollbars above minimum spec
  }

  @media #{$mq_lg} {
    font-size: 18px;
  }

}

.inner-wrapper {
  padding: 0 $gutter;
  position: relative;
  width: 100%;
}

@media #{$mq_lg} {

  .inner-wrapper,
  .inner-wrapper--at-lg {
    margin: 0 auto;
    max-width: $bp_max;
    padding: 0 $gutter_lg;
    width: 100%;
  }

}

.total-wrapper {
  margin-left: auto;
  margin-right: auto;
  max-width: $bp_max;
  min-height: 100vh;
  min-width: $bp_min;
  position: relative;

  @media #{$mq_max} {
    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.25);
  }

}

.site-header {
  backface-visibility: hidden; // fixed position fix for old mobile browsers
  left: 50%;
  position: fixed;
  transform: translateX(-50%);
  width: 100vw;
  z-index: 1;

  .inner-wrapper {
    align-items: stretch;
    display: flex;
    max-width: $bp_max;
    padding-left: 0;
    padding-right: 0;
  }

  &-primary,
  &-secondary {
    background-color: $c_dark-base;  // fallback
  }

  &-primary {
    background: radial-gradient(ellipse at right top, $c_dark-base 0%, $c_grey80 100%);    
  }

  &-primary .inner-wrapper {
    height: $header_height;
  }

  &-secondary {
    background: linear-gradient(180deg, rgba($c_grey50,1), rgba($c_grey50,0.75));
    display: none; // show with JS

    .inner-wrapper {
      @include f_smaller;
      display: flex;
      height: 30px;
      justify-content: space-between;
    }

    a {
      align-items: center;
      display: flex;
      height: 100%;
      min-width: 40px;
      padding: 4px $gutter;
      @media #{$mq_lg} {
        padding-left: $gutter_lg;
        padding-right: $gutter_lg;
      }
    }

    .title {
      //flex-grow: 1;
      overflow-x: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;

      strong {
        font-weight: 600;
      }

    }

  }

}

.header-logo {
  flex-grow: 1;
  svg {
    height: 150%; // let the y dangle over
    max-height: 48px;
    z-index: 2;
  }
  a {
    display: flex;
    height: 100%;
    padding: 4px;
    @media #{$mq_sm2} {
      padding-left: $gutter;
      padding-right: $gutter;
    }
    @media #{$mq_lg} {
      padding-left: $gutter_lg;
      padding-right: $gutter_lg;
    }
  }
}

.header-nav {
  > div {
    height: 100%;
  }
  ul {
    display: flex;
    height: 100%;
    list-style: none;
  }
  li {
    align-items: stretch;
    display: flex;

    &,
    &:not(:last-child) {  // override general list item styling
      margin: 0;
    }

    @media only screen and (max-width: #{$bp_sm3 - 1}) {
      // hide some nav items until screen is wide enough
      &:not(:first-child) {
        display: none;
      }
    }

  }
  a {
    align-items: center;
    display: flex;
    font-size: 0.875rem;
    font-weight: 500;
    padding: 0 8px;
    @media #{$mq_sm3} {
      font-size: 1rem;
      padding: 0 $gutter;
    }
    @media #{$mq_lg} {
      padding: 0 $gutter_lg;
    }
  }
}

.header-search .search-container {
  height: 100%;
  label {
    display: inline-block;
    padding-bottom: 6px;
    padding-top: 6px;
    &:first-of-type { // Search field
      padding-left: 8px;
      @media #{$mq_sm2} {
        padding-left: $gutter;
      }
      @media #{$mq_lg} {
        padding-left: $gutter_lg;
      }
    }
    &:last-of-type { // Search button
      padding-right: 4px;
      @media #{$mq_sm2} {
        padding-right: $gutter;
      }
      @media #{$mq_lg} {
        padding-right: $gutter_lg;
      }
    }
  }
}


// listing pages
main.listing-page {
  padding-top: $header_height + 2;  // 2px for bezel borders
}

.listing-page-header {
  margin-bottom: 12px;
  padding: 8px 0;
  width: 100%;

  @media #{$mq_lg} {
    padding: 12px 0;
  }

  .page-title {
    @include f_larger;

    &:not(:last-child) {
      margin-bottom: 0.25em;
    }

    span {
      @include f_smallest;
      color: $c_light50;
      display: block;
      font-family: monospace;
      margin-bottom: 0.125em;
    }

    strong {
      display: block;
      font-weight: 500;
    }

  }

  p {
    @include f_smaller;
  }

}


// 404 Page
body.error404 {

  main {
    // short page
    padding-bottom: 48px;
  }

  .site-footer {
    bottom: 0;
    position: absolute;
    width: 100%;
  }

  .article-card {
    padding-bottom: 40px;
    width: 100% !important;
  }

}


// Article Cards
.article-card {
  display: flex;
  flex-direction: column;
  margin-bottom: 48px;
  position: relative;
}

